# NeXgen-Engine

./: .gitignore  00-START-HERE.md  AI-UNINSTALL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  CREDITS.md  INIT.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
03-INFRA/: agent-browser-cdp.md  agent-guardians-map.md  agent-orchestration-protocol.md  agent-universal-layer.md  agentic-layer-concept-map.md  batch-vs-go-routing.md  firecrawl.md  model-routing-cost-strategy.md  n8n-workflow-regression-runbook.md  offline-emergency-mode.md  remote-automation.md  vault-grooming-playbook.md  vault-ocr.md  vault-write-architecture.md
03-INFRA/deploy/: .env.example  README.md  backup-restore.sh  bootstrap-vps.sh  semantic-search-recipe.md
03-INFRA/deploy/vault-mcp/: Dockerfile  README.md  ci-smoke.py  docker-compose.yml  provision-vault-repo.sh  pyproject.toml
03-INFRA/deploy/vault-mcp/src/vault_mcp_server/: config.py  server.py  vault.py
03-INFRA/scripts/: agent-doctor.ps1  agent-doctor.sh  agent-healthcheck.sh  agent-now.ps1  agent-now.sh  agent-skill.py  agent-sync.ps1  (+9 more)
04-NOW/: current-focus.md
99-INDEX/: USER-PROFILE.md  agent-retrieval-protocol.md  note-index.md  vault-cleanup-backlog.md
99-SECRETS/: .gitkeep  README.md  secrets-registry.md
docs/: council.md  lazy-skills.md  org-deployment.md  sync-contract.md  team.md  uninstall.md  upgrade.md  what-gets-written.md
(+62 files in other folders)
