[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-mcp-server"
version = "0.1.0"
description = "Read-only remote MCP server for Markdown vaults"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0,<2.0.0",
  "starlette>=0.37.2,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
vault-mcp-server = "vault_mcp_server.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
